--- a/style.css
+++ b/style.css
@@ -25,20 +25,21 @@ nav {
 }
 
 .image_container {
-  width: 500px;
-  height: 700px;
+  width: 300px;
+  height: 300px;
   border: 1px solid black;
   border-radius: 12%;
-  display: flex;
+  text-align: center;
+  /* display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
+  overflow: hidden; */
 }
 .sketch {
-  width: 90%;
-  height: 90%;
-  min-width: 560px;
+  width: 80%;
+  height: 80%;
+  /* min-width: 560px; */
 
   /* object-fit: cover; */
 }
@@ -49,17 +50,35 @@ audio {
 }
 figcaption {
   /* height: 5%; */
-  bottom: 3em;
+  /* bottom: 3em; */
+  bottom: 10%;
   position: relative;
-  font-size: 1.5rem;
+
+  /* font-size: 1.5rem; */
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: lightest;
   text-align: center;
 }
 figcaption p {
-  margin: 0;
+  margin-top: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+  display: inline-block;
+  padding: 10px 25px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
 footer {
-  margin-bottom: 1.5em;
+  font-size: 2em;
+  margin: 1.5em;
+  text-align: center;
+}
+
+@media (min-width: 700px) {
+  .main {
+    flex-direction: row;
+  }
 }
