--- a/style.css
+++ b/style.css
@@ -1,14 +1,6 @@
 body {
   margin: 0;
 }
-main {
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 1em;
-}
 
 nav {
   display: flex;
@@ -21,15 +13,26 @@ nav {
   height: 100px;
   display: flex;
 }
-.logo_container .logo {
+
+.main {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
 }
 
 .image_container {
-  width: 300px;
-  height: 300px;
-  border: 1px solid black;
+  /* width: 300px; */
+  /* height: 300px; */
+
+  /* max-width: 90%;
+  max-height: 90%; */
+  border: 1px solid rgb(160, 49, 49);
   border-radius: 12%;
   text-align: center;
+  overflow: hidden;
   /* display: flex;
   flex-direction: column;
   justify-content: center;
@@ -37,27 +40,34 @@ nav {
   overflow: hidden; */
 }
 .sketch {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
+
+  max-width: 400px;
   /* min-width: 560px; */
 
   /* object-fit: cover; */
 }
 
-audio {
-  margin: 0;
-  height: 20px;
-}
 figcaption {
   /* height: 5%; */
   /* bottom: 3em; */
   bottom: 10%;
-  position: relative;
-
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   /* font-size: 1.5rem; */
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: lightest;
   text-align: center;
+  background-color: rgb(248, 231, 231);
+}
+audio {
+  margin-top: 5px;
+  height: 20px;
+  width: 80%;
 }
 figcaption p {
   margin-top: 10px;
@@ -72,7 +82,8 @@ figcaption p {
 }
 
 footer {
-  font-size: 2em;
+  /* width: 400px; */
+  font-size: 1.5em;
   margin: 1.5em;
   text-align: center;
 }
@@ -80,5 +91,6 @@ footer {
 @media (min-width: 700px) {
   .main {
     flex-direction: row;
+    flex-wrap: wrap;
   }
 }
